Contextfree-node-node-setup/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-node-setup-svc
  labels:
    app: contextfree-network-node
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9933
      name: http-port
    - protocol: TCP
      port: 9945
      targetPort: 30333
      name: tcp-port
    - protocol: TCP
      port: 9944
      targetPort: 9944
      name: web-socket-port
  clusterIP: None
  selector:
    app: contextfree-network-node
